# jenkins

./: .gitignore  Jenkinsfile  README.md  app.py  pyproject.toml  test.py
src/app/: app.py
tests/: test_app.py
